# lol_analyzer

./: .env  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6d3ac004a8b4_remove_players_foreign_key.py  93b08c97f716_add_unique_constraints.py  f3c09bdb91e7_initial_schema.py
backend/app/: main.py
backend/app/db/: base.py
backend/app/models/: base.py  match.py  match_participant.py  players.py  timeline_frame.py
backend/app/services/: analysis.py  bulk_ingestion.py  ingestion.py  riot_client.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: Dashboard.tsx  Hero.tsx  Hero.tsx.bak
